# dotfiles-bin

./: Cargo.toml  LICENSE
src/: filesystem.rs  interpolate.rs  lockfile.rs  main.rs
src/commands/: deploy.rs
src/extension/: mod.rs  package_install.rs  source_install.rs  symlink.rs
src/extension/old/: pacman_install.rs
