[package]
name = "dotfiles"
version = "0.0.1"
edition = "2021"

[dependencies]
thiserror = "1.0.37"
anyhow = "1.0.65"

clap = { version = "4.0.9", features = ["derive"] }
orgize = "0.9.0"
toml = "0.5.9"
serde = { version = "1.0.145", features = ["derive"] }
users = "0.11.0"
dirs = "4.0.0"
libc = "0.2.134"
shlex = "1.1.0"
git2 = "0.15.0"

tui = "0.19.0"
crossterm = "0.25.0"